<resources>
    <string name="app_name">PDF Viewer</string>
    <string name="todo">TODO</string>

    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="detail">Details</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pdf">PDF</string>
    <string name="search">Search</string>
    <string name="reader">\tViewer</string>
    <string name="settings">Settings</string>
    <string name="permission">Permission denied. Cannot access external storage.</string>
    <string name="no_pdf">No PDF found in your phone</string>


    <string name="messages_header">Style</string>
    <string name="sync_header">Mode</string>

    <string name="title">PDF name size</string>
    <string name="size">PDF size</string>
    <string name="Dark_mode">Dark Mode</string>


</resources>