<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="16"
            app:entries="@array/title"
            app:entryValues="@array/title_values"
            app:key="fontTitle"
            app:title="@string/title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="12"
            app:entries="@array/size"
            app:entryValues="@array/size_values"
            app:key="fontSize"
            app:title="@string/size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="3"
            app:entries="@array/dark_mode"
            app:entryValues="@array/dark_mode_value"
            app:key="mode"
            app:title="@string/Dark_mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>