<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    android:elevation="10dp"
    android:backgroundTint="@color/background_color"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginHorizontal="30dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:foreground="?attr/selectableItemBackground"
            android:padding="13dp"
            android:text="@string/rename"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:focusable="true"
            android:layout_below="@id/rename"
            android:foreground="?attr/selectableItemBackground"
            android:padding="13dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginHorizontal="30dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:layout_below="@id/delete"
            android:foreground="?attr/selectableItemBackground"
            android:padding="13dp"
            android:text="@string/share"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:focusable="true"
            android:layout_below="@id/share"
            android:foreground="?attr/selectableItemBackground"
            android:padding="13dp"
            android:text="@string/detail"
            android:textAlignment="center"
            android:textSize="16sp"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>