<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/layout"
        tools:context=".fragments.FirstFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/pdf"
                    style="@style/toolbarTv"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/reader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/pdf"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/reader"
                    android:textColor="@color/red_color"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="3dp"
                    android:layout_below="@id/pdf"
                    android:layout_alignStart="@id/pdf"
                    android:layout_alignEnd="@id/pdf"
                    android:background="@drawable/round"
                    android:backgroundTint="#FFB300" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:visibility="gone"
            android:layout_below="@id/toolbar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/pdf_row" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/cardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/toolbarTv"
                android:gravity="center"
                android:text="@string/permission"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>